--- a/keyFrame/index.html
+++ b/keyFrame/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="yellow"><p>:after</p></div>
-    <div class="blue"><p>:before</p></div>
-    <div class="green"><p>< element ></p></div>
-    <div class="white"><p id="content">[content]</p></div>
+    <div class="box"></div>
+
 </body>
 </html>
