--- a/js28.03.html
+++ b/js28.03.html
@@ -7,85 +7,118 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-
-
+  
 
 <script>
-     // Ternary Operator Example
-         document.write("Ternary"+ " "+"Example" + "<br>");
-         var age  = 15;
-         var status = (age >= 20) ? 'true' : 'false';
-         document.write(status +"<br>" +"<br>");
+ 
+   var time = "Morning";
 
-     // String Operators Example 
-         document.write("String"+ " "+ "Example" + "<br>");
-         var text1= "Hello";
-         var text2 ="Azerbaijan";
-         document.write(text1 +" "+ text2+"<br>");
-         text1+="World";
-         document.write(text1 + "<br>" + "<br>");
+  
+if (time === "Morning") {
+     document.write("Time is: 08:00 PM");
+ } else if(time === "Afternoon") {
 
-     // Logical Operators Example
-         document.write("Logical Example" + "<br>");
-         var a=5;
-         var b=10;
-         var c=7;
-         if(a>b && b>c){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-         if(b>a && c>a){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-         if(a>b || b>c){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-         if(a>b || c>b){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>" + "<br>");
-         }
+    document.write("Time is: 14:00 PM");
+ }
+    else if(time === "Evening"){
+        document.write("Time is: 21:00 PM");
+    }
+    else{
+        document.write("Empty");
+    }
 
-     // Comparison Operators Example   
-         document.write("Comparison"+ " "+"Example" + "<br>");
-         var text="5";
-         var numb= 5;
-         if(text==numb){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         } 
-         if(text===numb){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-         if(text != numb){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-         if(text !== numb){
-             document.write(true + "<br>"); 
-         }
-         else{
-             document.write(false + "<br>");
-         }
-   
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+//  // Ternary Operator Example
+//      document.write("Ternary"+ " "+"Example" + "<br>");
+//      var age  = 15;
+//      var status = (age >= 20) ? 'true' : 'false';
+//      document.write(status +"<br>" +"<br>");
+
+//  // String Operators Example 
+//      document.write("String"+ " "+ "Example" + "<br>");
+//      var text1= "Hello";
+//      var text2 ="Azerbaijan";
+//      document.write(text1 +" "+ text2+"<br>");
+//      text1+="World";
+//      document.write(text1 + "<br>" + "<br>");
+
+//  // Logical Operators Example
+//      document.write("Logical Example" + "<br>");
+//      var a=5;
+//      var b=10;
+//      var c=7;
+//      if(a>b && b>c){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      }
+//      if(b>a && c>a){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      }
+//      if(a>b || b>c){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      }
+//      if(a>b || c>b){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>" + "<br>");
+//      }
+
+//  // Comparison Operators Example   
+//      document.write("Comparison"+ " "+"Example" + "<br>");
+//      var text="5";
+//      var numb= 5;
+//      if(text==numb){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      } 
+//      if(text===numb){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      }
+//      if(text != numb){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      }
+//      if(text !== numb){
+//          document.write(true + "<br>"); 
+//      }
+//      else{
+//          document.write(false + "<br>");
+//      } -->
