--- a/sabina-tasks/index02.04.html
+++ b/sabina-tasks/index02.04.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="sass02.04/style.css">
     <script src="https://kit.fontawesome.com/36f29ba7e0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Project</title>
   </head>
   <body>
@@ -53,7 +54,7 @@
           </nav>
           <div class="container hero-text d-flex flex-column justify-content-center align-items-center">
           <p>WE WORK HARD, WE PLAY HARD</p>
-          <h1>We are delivering beautiful products</h1>
+          <h1 class="animate__animated animate__fadeInDown">We are delivering</h1> <h1 class="animate__animated animate__fadeInUp"> beautiful products</h1>
           <button>EXPLORE WORK</button>
         </div>
         </div>
@@ -62,7 +63,7 @@
 
     <!-- ------------------------About Section Start------------------------------------ -->
 
-<div class="about">
+<div class="about  ">
     <div class="container-fluid d-flex flex-row">
      <div> <img width="600px" height="600px" src="image/about-img.png" alt=""></div>
      <div class="about-text d-flex flex-column justify-content-start">
@@ -96,7 +97,7 @@
   
 <div class="container  section2 ">
   <div class="section2-text d-flex flex-column justify-content-center  ">
-<h1>Beautiful and easy to use UI, professional animations and drag & drop feature</h1>
+<h1 class="animate__animated animate__fadeInDown">Beautiful and easy to use UI, professional animations and drag & drop feature</h1>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 <div class="row ">
   <div class="card  card-main "style="text-align: center;" >
