--- a/sabina-tasks/index07.04_2.htm
+++ b/sabina-tasks/index07.04_2.htm
@@ -41,9 +41,9 @@
   <script>
     VanillaTilt.init(document.querySelectorAll(".card"),{
 		max: 25,
-		speed: 400,
-    glare: true,
-    "max-glare": 1,
+		speed: 1000,
+    startX:   2,
+  
 	});
   </script>
 </body>
