--- a/JavaScriptLessons/Lesson6/index.html
+++ b/JavaScriptLessons/Lesson6/index.html
@@ -7,20 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>JavaScript Functions</title>
 </head>
-<body onbeforeunload="return myFunc()">
+<body>
 
-    <!-- <ul>
+    <ul>
         <li></li>
         <li></li>
         <li></li>
     </ul>
-<button onclick="addNumb('hi JavaScript')">Add Number</button> -->
-<script>
-    function myFunc(){
-        return "";
-    }
-</script>
-    <script src="main.js"></script>
-    <!-- <script src="main1.js"></script> -->
+<button onclick="addNumb('hi JavaScript')">Add Number</button>
+    <!-- <script src="main.js"></script> -->
+    <script src="main1.js"></script>
 </body>
 </html>
