--- a/JavaScriptLessons/JavaScriptDOM/index.html
+++ b/JavaScriptLessons/JavaScriptDOM/index.html
@@ -107,7 +107,6 @@ document.querySelector("p").innerHTML = "Hi JavaScript";
             }
  </script> -->
 
- <!-- --------------------------------------------------------------------------------------------- -->
 
  <!-- <div onmouseover="mOver(this)" onmouseout="mOut(this)" 
 style="background-color:#D94A38;width:120px;height:20px;padding:40px;">
@@ -119,13 +118,12 @@ function mOver(obj) {
 }
 
 function mOut(obj) {
-  obj.innerHTML = "Mdjkskjnf"
+  obj.innerHTML = "Mouse Over Me"
 }
 </script> -->
 
 <!-- https://www.w3schools.com/js/tryit.asp?filename=tryjs_dom_animate_3? -->
 
-<!-- --------------------------------------------------------------------------------------------- -->
 
 <!-- <p></p>
 <script>
@@ -133,10 +131,6 @@ function mOut(obj) {
 var infoTime = () => {document.getElementsByTagName('p')[0].innerHTML = new Date();}
 setInterval(infoTime, 0.1)
 </script> -->
-
-<!-- --------------------------------------------------------------------------------------------- -->
-
-
 <!-- <button onmousedown="infoDown(this)" onmouseup="infoUp(this)">Click Me</button>
 
 <script>
@@ -148,9 +142,6 @@ setInterval(infoTime, 0.1)
 
     }
 </script> -->
-
-<!-- --------------------------------------------------------------------------------------------- -->
-
 
 <!-- <p></p>
 <button>Press</button>
@@ -164,23 +155,20 @@ setInterval(infoTime, 0.1)
    
 </script> -->
 
-<!-- --------------------------------------------------------------------------------------------- -->
 
 <!-- <h1>hi Javascript</h1>
-<p> mhkn</p>
-<p>njsnf</p>
-
+<p></p>
 <script>
     document.querySelector('p').innerHTML = document.querySelector('h1').childNodes[0].nodeValue;
 </script> -->
 
-<!-- --------------------------------------------------------------------------------------------- -->
 
 <!-- <div>
 <h1>FS JS</h1>
 </div>
 
 <script>
+
  var infoAdd  = document.createElement('h1');
  var infoText = document.createTextNode('HI JS');
 infoAdd.appendChild(infoText);
@@ -189,7 +177,7 @@ var infoElement =  document.querySelector('div');
 infoElement.appendChild(infoAdd);
 
 </script> -->
-<!-- --------------------------------------------------------------------------------------------- -->
+
 
 </body>
 </html>
