--- a/JavaScriptLessons/Lesson6/index.html
+++ b/JavaScriptLessons/Lesson6/index.html
@@ -15,7 +15,7 @@
         <li></li>
     </ul>
 <button onclick="addNumb('hi JavaScript')">Add Number</button>
-    <!-- <script src="main.js"></script> -->
-    <script src="main1.js"></script>
+    <script src="main.js"></script>
+    <!-- <script src="main1.js"></script> -->
 </body>
 </html>
